[tool.poetry]
name = "qs_test"
version = "0.1.0"
description = "Solution for invterview task"
authors = ["intey <ziexe0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
