[tool.poetry]
name = "qs_test"
version = "0.1.0"
description = "Solution for invterview task"
authors = ["intey <ziexe0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^5.5"
fastapi = "^0.66.0"
Jinja2 = "^3.0.1"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
